@@ -10,7 +10,7 @@
 #   BOOST_SUFFIX=-mt       To link against libboost-xyz-mt (needed for pybombs)
 #--------------------------------------------------------------------------------
 
-QT       += core gui network widgets
+QT       += core gui network widgets svg
 
 lessThan(QT_MAJOR_VERSION,5) {
     error("Gqrx requires Qt 5.")
